--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Honeyswap",
-  "name": "Honeyswap",
+  "short_name": "Espento",
+  "name": "Espento",
   "iconPath": "./images/512x512_App_Icon.png",
   "description": "Decentralized exchange built by 1Hive DAO",
   "icons": [
