--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,10 +1,17 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "strict": false,
     "baseUrl": "../node_modules",
     "target": "es5",
-    "lib": ["es5", "dom"],
-    "types": ["cypress"]
+    "lib": [
+      "es5",
+      "dom"
+    ],
+    "types": [
+      "cypress"
+    ]
   },
-  "include": ["**/*.ts"]
+  "include": [
+    "**/*.ts"
+  ]
 }
