--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "cross-env": "^7.0.2",
     "cypress": "^4.11.0",
     "decimal.js-light": "^2.5.1",
-    "dxswap-core": "https://github.com/1Hive/dxswap-core.git",
-    "dxswap-periphery": "https://github.com/1Hive/dxswap-periphery.git",
-    "dxswap-sdk": "https://github.com/1Hive/honeyswap-sdk.git",
+    "dxswap-sdk": "https://github.com/princepatel1010/dxswap-sdk.git",
+    "dxswap-core": "https://github.com/princepatel1010/dxswap-core.git",
+    "dxswap-periphery": "https://github.com/princepatel1010/dxswap-periphery.git",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
@@ -97,7 +97,7 @@
     "wcag-contrast": "^3.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-app-rewired build",
     "ipfs-build": "cross-env PUBLIC_URL=\".\" GENERATE_SOURCEMAP=false react-app-rewired build",
     "test": "react-scripts test --env=jsdom",
